hphp/test/quick/hh_typehint4.php.expectf

Catchable fatal error: Argument 1 to foo() must be of type ?HH\varray, stdClass given in %s/quick/hh_typehint4.php on line 8
